work/20230221/ingress-tls/myapp-ing-tls-term.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing-tls-term
spec:
  tls:
    - hosts:
      - myapp.example.com
      secretName: ingress-tls-secret
  rules:
    - host: myapp.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: myapp-svc-np
                port:
                  number: 80
